# Lumin

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  preloader.img
core/: CMakeLists.txt
core/dependencies/glad/: CMakeLists.txt
core/dependencies/glfw/: CMakeLists.txt
core/include/: Lumin.h
core/include/Lumin/Core/: Engine.h
core/include/Lumin/Core/Audio/: AudioEngine.h  AudioManager.h  SoundBuffer.h  SoundSource.h
core/include/Lumin/Core/Colors/: Colors.h
core/include/Lumin/Core/Object/: Object.h  ObjectsManager.h
core/include/Lumin/Core/Renderer/: Camera.h  Light.h  Object.h  Renderer.h  Texture.h
core/include/Lumin/Core/Shaders/: Shaders.h
core/include/Lumin/Core/Window/: Window.h
core/resources/resources/: model.mtl  model2.mtl
core/resources/resources/shaders/: debug_color_vertex.glsl  fragment_shader.glsl
core/src/Lumin/Core/: Engine.cpp  stb_image_impl.cpp
core/src/Lumin/Core/Audio/: AudioEngine.cpp  AudioManager.cpp  SoundBuffer.cpp  SoundSource.cpp
core/src/Lumin/Core/Object/: Object.cpp  ObjectsManager.cpp
core/src/Lumin/Core/Renderer/: Camera.cpp  Light.cpp  Object.cpp  Renderer.cpp  Texture.cpp
core/src/Lumin/Core/Shaders/: Shaders.cpp
core/src/Lumin/Core/Window/: Window.cpp
dependencies/imgui/: CMakeLists.txt
docs/ru/: CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  README.md
editor/: CMakeLists.txt
editor/resources/shaders/: debug_color_fragment.glsl  vertex_shader.glsl
editor/src/: main.cpp
include/Renderer/: Camera.h  Light.h  Object.h  Renderer.h  Texture.h
include/Shaders/: Shaders.h
include/Window/: Window.h
project_manager/: CMakeLists.txt
project_manager/resources/templates/project/: CMakeLists.txt  project_info.cfg
project_manager/resources/templates/project/src/: entry.cpp  main.cpp
project_manager/src/: main.cpp
resources/resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
script_api/: CMakeLists.txt
script_api/include/Lumin/ScriptAPI/: Components.h  ScriptAPI.h  Types.h  Utils.h
script_api/include/Lumin/ScriptAPI/Components/: AudioClip.h  AudioListener.h  CameraTransform.h  Transform.h
script_api/include/Lumin/ScriptAPI/Types/: Camera.h  GameObject.h
script_api/include/Lumin/ScriptAPI/Utils/: Input.h  ShadersManager.h  Vectors.h
script_api/src/Lumin/ScriptAPI/: ScriptAPI.cpp
script_api/src/Lumin/ScriptAPI/Components/: AudioClip.cpp  AudioListener.cpp  CameraTransform.cpp  Transform.cpp
script_api/src/Lumin/ScriptAPI/Types/: Camera.cpp  GameObject.cpp
script_api/src/Lumin/ScriptAPI/Utils/: Input.cpp
src/: bootloader.asm  kernel-linker.ld  kernel.c  main.cpp  stb_image_impl.cpp
src/Renderer/: Camera.cpp  Light.cpp  Object.cpp  Renderer.cpp  Texture.cpp
src/Shaders/: Shaders.cpp
src/Window/: Window.cpp
